--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -257,6 +257,7 @@
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
     {{ 'custom-idk-styles.css' | asset_url | stylesheet_tag }}
+    {{ 'custom-header-styles.css' | asset_url | stylesheet_tag }}
     <link rel="stylesheet" href="{{ 'component-cart-items.css' | asset_url }}" media="print" onload="this.media='all'">
 
     {%- if settings.cart_type == 'drawer' -%}
