--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -278,6 +278,11 @@
         </a>
       {%- endif -%}
 
+      <!-- FAQ Link -->
+      <a href="/pages/faq" class="header__icon header__icon--faq link focus-inset">
+        <span class="header__faq-text">FAQ</span>
+      </a>
+
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when '@app' -%}
