--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -7,88 +7,73 @@
 
 <nav class="header__inline-menu">
   <ul class="list-menu list-menu--inline" role="list">
-    {%- for link in section.settings.menu.links -%}
-      <li>
-        {%- if link.links != blank -%}
-          <header-menu>
-            <details id="Details-HeaderMenu-{{ forloop.index }}" class="mega-menu">
-              <summary
-                id="HeaderMenu-{{ link.handle }}"
-                class="header__menu-item list-menu__item link focus-inset"
-              >
-                <span
-                  {%- if link.child_active %}
-                    class="header__active-menu-item"
-                  {% endif %}
-                >
-                  {{- link.title | escape -}}
-                </span>
-                {{- 'icon-caret.svg' | inline_asset_content -}}
-              </summary>
-              <div
-                id="MegaMenu-Content-{{ forloop.index }}"
-                class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
-                tabindex="-1"
-              >
-                <ul
-                  class="mega-menu__list page-width{% if link.levels == 1 %} mega-menu__list--condensed{% endif %}"
-                  role="list"
-                >
-                  {%- for childlink in link.links -%}
-                    <li>
-                      <a
-                        id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
-                        href="{{ childlink.url }}"
-                        class="mega-menu__link mega-menu__link--level-2 link{% if childlink.current %} mega-menu__link--active{% endif %}"
-                        {% if childlink.current %}
-                          aria-current="page"
-                        {% endif %}
-                      >
-                        {{ childlink.title | escape }}
-                      </a>
-                      {%- if childlink.links != blank -%}
-                        <ul class="list-unstyled" role="list">
-                          {%- for grandchildlink in childlink.links -%}
-                            <li>
-                              <a
-                                id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
-                                href="{{ grandchildlink.url }}"
-                                class="mega-menu__link link{% if grandchildlink.current %} mega-menu__link--active{% endif %}"
-                                {% if grandchildlink.current %}
-                                  aria-current="page"
-                                {% endif %}
-                              >
-                                {{ grandchildlink.title | escape }}
-                              </a>
-                            </li>
-                          {%- endfor -%}
-                        </ul>
-                      {%- endif -%}
-                    </li>
-                  {%- endfor -%}
-                </ul>
-              </div>
-            </details>
-          </header-menu>
-        {%- else -%}
-          <a
-            id="HeaderMenu-{{ link.handle }}"
-            href="{{ link.url }}"
-            class="header__menu-item list-menu__item link link--text focus-inset"
-            {% if link.current %}
-              aria-current="page"
-            {% endif %}
+    <!-- SHOP Dropdown -->
+    <li>
+      <header-menu>
+        <details id="Details-HeaderMenu-Shop" class="mega-menu">
+          <summary
+            id="HeaderMenu-Shop"
+            class="header__menu-item list-menu__item link focus-inset"
           >
-            <span
-              {%- if link.current %}
-                class="header__active-menu-item"
-              {% endif %}
-            >
-              {{- link.title | escape -}}
+            <span class="header__active-menu-item">
+              SHOP
             </span>
-          </a>
-        {%- endif -%}
-      </li>
-    {%- endfor -%}
+            {{- 'icon-caret.svg' | inline_asset_content -}}
+          </summary>
+          <div
+            id="MegaMenu-Content-Shop"
+            class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
+            tabindex="-1"
+          >
+            <div class="mega-menu__layout page-width">
+              <!-- Left Column -->
+              <div class="mega-menu__column">
+                <a href="/collections/all" class="mega-menu__link mega-menu__link--level-2 link">
+                  SHOP ALL →
+                </a>
+                <a href="/collections/best-sellers" class="mega-menu__link mega-menu__link--level-2 link">
+                  BEST SELLERS
+                </a>
+                <a href="/collections/hoodies" class="mega-menu__link mega-menu__link--level-2 link">
+                  HOODIES
+                </a>
+                <a href="/collections/denim" class="mega-menu__link mega-menu__link--level-2 link">
+                  DENIM
+                </a>
+                <a href="/collections/basics" class="mega-menu__link mega-menu__link--level-2 link">
+                  BASICS
+                </a>
+              </div>
+              <!-- Right Column -->
+              <div class="mega-menu__column">
+                <a href="/collections/knitwear" class="mega-menu__link mega-menu__link--level-2 link">
+                  KNITWEAR
+                </a>
+                <a href="/collections/tees" class="mega-menu__link mega-menu__link--level-2 link">
+                  TEES
+                </a>
+                <a href="/collections/bottoms" class="mega-menu__link mega-menu__link--level-2 link">
+                  BOTTOMS
+                </a>
+                <a href="/collections/small-goods" class="mega-menu__link mega-menu__link--level-2 link">
+                  SMALL GOODS
+                </a>
+              </div>
+            </div>
+          </div>
+        </details>
+      </header-menu>
+    </li>
+    
+    <!-- SUMMER TEES Link -->
+    <li>
+      <a
+        id="HeaderMenu-Summer-Tees"
+        href="/collections/summer-tees"
+        class="header__menu-item list-menu__item link link--text focus-inset"
+      >
+        <span>SUMMER TEES</span>
+      </a>
+    </li>
   </ul>
 </nav>
