--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -65,14 +65,14 @@
       </header-menu>
     </li>
     
-    <!-- SUMMER TEES Link -->
+    <!-- FAQ Link -->
     <li>
       <a
-        id="HeaderMenu-Summer-Tees"
-        href="/collections/summer-tees"
+        id="HeaderMenu-FAQ"
+        href="/pages/faq"
         class="header__menu-item list-menu__item link link--text focus-inset"
       >
-        <span>SUMMER TEES</span>
+        <span>FAQ</span>
       </a>
     </li>
   </ul>
