--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -74,6 +74,36 @@
       padding-top: 0.5rem;
     }
   }
+
+  /* Ensure all SVG icons in header are the same size */
+  .header__icon .svg-wrapper svg,
+  .header__icon .svg-wrapper {
+    width: 24px;
+    height: 24px;
+    display: block;
+  }
+
+  .header__icon .svg-wrapper svg {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Specific icon sizing for consistency */
+  .header__icon--search .svg-wrapper,
+  .header__icon--account .svg-wrapper,
+  .header__icon--cart .svg-wrapper {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* Caret icon sizing */
+  .list-menu__item .svg-wrapper svg {
+    width: 12px;
+    height: 12px;
+  }
 </style>
 
 {%- style -%}
